--- a/src/views/chat_app.hbs
+++ b/src/views/chat_app.hbs
@@ -1,5 +1,6 @@
 {{#section 'link'}}
 <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 {{/section}}
 {{#section 'style'}}
     .cover {
@@ -49,6 +50,16 @@
       color: #f8ce0b;
     }
 
+    .btn-circle {
+      width: 30px;
+      height: 30px;
+      text-align: center;
+      padding: 6px 0;
+      font-size: 12px;
+      line-height: 1.428571429;
+      border-radius: 15px;
+    }
+    
     {{/section}}
   
     
@@ -132,17 +143,20 @@
             <div class="card" style="opacity: 90%; height: 80px;">
                 <div class="card-body" style="padding: 10px;">
                     <div class="row">
-                        <div class="col-8">
+                        <div class="col-7">
                             <h5 class="card-title" style="margin-bottom: 2px;">Rohit Sharma</h5>
                             <p class="card-text">Crops grown : Tomato, potato, rice</p>
                         </div>
-                        <div class="col-4">
+                        <div class="col-3">
                             <p class="card-text">Rating : 5
                                 <div class="stars-outer" id="stars-outer{{this.1._id}}">
                                     <div class="stars-inner" id="stars-inner{{this.1._id}}" style="color:#f8ce0b; --r:20%; --a:{{this.1.rating}}">
                                     </div>
                                 </div>
                             </p>
+                        </div>
+                        <div class="col-1" style="margin-top: 17px;">
+                          <button type="button" class="btn btn-success btn-circle">1</button>
                         </div>
                     </div>
                 </div>
@@ -157,17 +171,20 @@
             <div class="card" style="opacity: 90%; height: 80px;">
                 <div class="card-body" style="padding: 10px;">
                     <div class="row">
-                        <div class="col-8">
+                        <div class="col-7">
                             <h5 class="card-title" style="margin-bottom: 2px;">Rohit Sharma</h5>
                             <p class="card-text">Crops grown : Tomato, potato, rice</p>
                         </div>
-                        <div class="col-4">
+                        <div class="col-3">
                             <p class="card-text">Rating : 5
                                 <div class="stars-outer" id="stars-outer{{this.1._id}}">
                                     <div class="stars-inner" id="stars-inner{{this.1._id}}" style="color:#f8ce0b; --r:20%; --a:{{this.1.rating}}">
                                     </div>
                                 </div>
                             </p>
+                        </div>
+                        <div class="col-1" style="margin-top: 17px;">
+                          <button type="button" class="btn btn-success btn-circle">1</button>
                         </div>
                     </div>
                 </div>
@@ -182,11 +199,11 @@
             <div class="card" style="opacity: 90%; height: 80px;">
                 <div class="card-body" style="padding: 10px;">
                     <div class="row">
-                        <div class="col-8">
+                        <div class="col-7">
                             <h5 class="card-title" style="margin-bottom: 2px;">Rohit Sharma</h5>
                             <p class="card-text">Crops grown : Tomato, potato, rice</p>
                         </div>
-                        <div class="col-4">
+                        <div class="col-3">
                             <p class="card-text">Rating : 5
                                 <div class="stars-outer" id="stars-outer{{this.1._id}}">
                                     <div class="stars-inner" id="stars-inner{{this.1._id}}" style="color:#f8ce0b; --r:20%; --a:{{this.1.rating}}">
