changes in chat

--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -9,5 +9,6 @@ Chat app
 <template id="message-template" >
             <div>
                 <p>\{{message}}</p>
+                <p>\{{createdAt}}</p>
             </div>
     </template>
