--- a/src/views/chat_app.hbs
+++ b/src/views/chat_app.hbs
@@ -104,7 +104,7 @@
                 <a class="nav-link" href="/users/updateprofile">Update Profile</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="/chat/chat_app">Chat</a>
+                <a class="nav-link" href="/users/chat">Chat</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/users/logout">Logout</a>
@@ -124,7 +124,7 @@
             <a class="page-scroll" href="/users/updateprofile">Update Profile</a>
           </li>
           <li>
-            <a class="page-scroll" href="/chat/chat_app">Chat</a>
+            <a class="page-scroll" href="/users/chat">Chat</a>
           </li>
           <li>
             <a class="page-scroll" href="/users/logout">Logout</a>
