--- a/src/views/chat_app_buyer.hbs
+++ b/src/views/chat_app_buyer.hbs
@@ -107,7 +107,7 @@
                 <a class="nav-link" href="/users/buyer_orders">Orders</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="/chat/chat_list">Chat</a>
+                <a class="nav-link" href="/users/chat">Chat</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/users/logout">Logout</a>
@@ -130,7 +130,7 @@
             <a class="page-scroll" href="/users/buyer_orders">Orders</a>
           </li>
           <li>
-            <a class="page-scroll" href="/chat/chat_app">Chat</a>
+            <a class="page-scroll" href="/users/chat">Chat</a>
           </li>
           <li>
             <a class="page-scroll" href="/users/logout">Logout</a>
