--- a/src/views/chat_app_farmer.hbs
+++ b/src/views/chat_app_farmer.hbs
@@ -75,7 +75,7 @@
                 <a class="nav-link" href="/users/updateprofile">Update Profile</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="/chat/chat_app_farmer">Chat</a>
+                <a class="nav-link" href="/users/chat">Chat</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/users/logout">Logout</a>
@@ -95,7 +95,7 @@
             <a class="page-scroll" href="/users/updateprofile">Update Profile</a>
           </li>
           <li>
-            <a class="page-scroll" href="/chat/chat_app_farmer">Chat</a>
+            <a class="page-scroll" href="/users/chat">Chat</a>
           </li>
           <li>
             <a class="page-scroll" href="/users/logout">Logout</a>
