changes in chat links

--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -1,4 +1,6 @@
+{{#section 'title'}}
 Chat app
+{{/section}}
 <div id="messages"></div>
 <form id="chatform">
     <input type="text" name="msg"><br>
