--- a/src/views/farmer_dashboard.hbs
+++ b/src/views/farmer_dashboard.hbs
@@ -93,7 +93,7 @@
                 <a class="nav-link" href="updateprofile">Update Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/chat/chat_app_farmer">Chat</a>
+                <a class="nav-link" href="chat">Chat</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="logout">Logout</a>
@@ -113,7 +113,7 @@
             <a class="page-scroll" href="updateprofile">Update Profile</a>
           </li>
           <li>
-            <a class="page-scroll" href="/chat/chat_app_farmer">Chat</a>
+            <a class="page-scroll" href="chat">Chat</a>
           </li>
           <li>
             <a class="page-scroll" href="logout">Logout</a>
