--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -1,14 +1,151 @@
-Chat app
-<div id="messages"></div>
-<form id="chatform">
-    <input type="text" name="msg"><br>
-    <button type="submit" class="btn btn-common btn-nv-sty" style="width: 50%;" id="chatbutton" name="chatbutton">
-        Send
-    </button>   
-</form>
-<template id="message-template" >
-            <div>
-                <p>\{{message}}</p>
-                <p>\{{createdAt}}</p>
+{{#section 'style'}}
+    .cover {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+    .content {
+      flex: 1 0 auto;
+    }
+    #contact {
+      flex-shrink: 0;
+    }
+    #mygif {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+    }
+
+    /* width */        
+        ::-webkit-scrollbar {
+            width: 30px;
+        }
+  
+        /* Track */
+        ::-webkit-scrollbar-track {
+            background: #f1f1f1;
+        }
+  
+        /* Handle */
+        ::-webkit-scrollbar-thumb {
+            background: #888;
+        }
+  
+        /* Handle on hover */
+        ::-webkit-scrollbar-thumb:hover {
+            background: #555;
+        }
+          
+        .scroll {
+            display: block;
+            border: 0px solid red;
+            padding: 5px;
+            margin-top: 5px;
+            width: 100%;
+            height: 1000px;
+            overflow-y: scroll;
+        }
+    {{/section}}
+  
+    
+  
+  <div class="cover">
+  <img src="/img/crops.gif" id="mygif" alt="...">
+
+  <header id="header-wrap">
+      <!-- Navbar Start -->
+      <nav
+        class="navbar navbar-expand-lg fixed-top scrolling-navbar"
+        style="background-color: #fff;"
+      >
+        <div class="container">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#main-navbar"
+              aria-controls="main-navbar"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+              <span class="icon-menu"></span>
+              <span class="icon-menu"></span>
+              <span class="icon-menu"></span>
+            </button>
+            <img src="/img/logo.png" class="navbar-brand" style="width: 230px; height:70px" alt=""/>
+          </div>
+          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 10%;">
+            <ul class="navbar-nav mr-auto w-100">
+              <li class="nav-item active">
+                <a class="nav-link" href="dashboard">Dashboard</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="viewfarmers">View Farmer's Profiles</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="updateprofile">Update Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/chat/chat_app">Chat</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="logout">Logout</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <ul class="mobile-menu">
+          <li>
+            <a class="page-scroll" href="dashboard">Dashboard</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="viewfarmers">View Farmer's Profiles</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="updateprofile">Update Profile</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="/chat/chat_app">Chat</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="logout">Logout</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <br><br><br><br>
+    <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+       <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 90%;">Chat</span> 
+    </h1>
+    <section id="form-dom">
+        <div class="scroll">
+        <div class="container" style="margin-bottom: 30px; opacity: 90%;">
+          <div class="row">
+            <div class="col-12">
+              <div class="col-12 col-md-12 col-lg-10 log-style">
+                  <div class="design">
+                    <div id="messages"></div>
+                    <form id="chatform">
+                        <input type="text" name="msg"><br>
+                        <button type="submit" class="btn btn-common btn-nv-sty" style="width: 50%;" id="chatbutton" name="chatbutton">
+                            Send
+                        </button>   
+                    </form>
+                    <template id="message-template" >
+                        <div>
+                            <p>\{{message}}</p>
+                            <p>\{{createdAt}}</p>
+                        </div>
+                    </template>
+                  </div>
+              </div>
             </div>
-    </template>
+          </div>
+        </div>
+        </div>
+  </div>
