--- a/src/views/buyer_profile.hbs
+++ b/src/views/buyer_profile.hbs
@@ -60,7 +60,7 @@
                 <a class="nav-link" href="buyer_orders">Orders</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="chat">Chat</a>
+                <a class="nav-link" href="/users/chat">Chat</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="logout">Logout</a>
@@ -83,7 +83,7 @@
             <a class="page-scroll" href="buyer_orders">Orders</a>
           </li>
           <li>
-            <a class="page-scroll" href="chat">Chat</a>
+            <a class="page-scroll" href="/users/chat">Chat</a>
           </li>
           <li>
             <a class="page-scroll" href="logout">Logout</a>
