--- a/src/views/chat_app_buyer.hbs
+++ b/src/views/chat_app_buyer.hbs
@@ -142,21 +142,22 @@
     <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
        <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 90%;">Chat list</span> 
     </h1>
+    {{#each farmer}}
     <div class="row">
         <div class="col-lg-3"></div>
         <div class="col-lg-6 col-12">
-            <a href="" style="color: black;">
+            <a href="/chat/{{this._id}}" style="color: black;">
             <div class="card" style="opacity: 90%; height: 80px;">
                 <div class="card-body" style="padding: 10px;">
                     <div class="row">
                         <div class="col-7">
-                            <h5 class="card-title" style="margin-bottom: 2px;">Rohit Sharma</h5>
-                            <p class="card-text">Crops grown : Tomato, potato, rice</p>
+                            <h5 class="card-title" style="margin-bottom: 2px;">{{this.fullname}}</h5>
+                            <p class="card-text">Crops grown : {{this.crops}}</p>
                         </div>
                         <div class="col-3">
-                            <p class="card-text">Rating : 5
-                                <div class="stars-outer" id="stars-outer{{this.1._id}}">
-                                    <div class="stars-inner" id="stars-inner{{this.1._id}}" style="color:#f8ce0b; --r:20%; --a:{{this.1.rating}}">
+                            <p class="card-text">Rating : {{this.rating}}
+                                <div class="stars-outer" id="stars-outer{{this._id}}">
+                                    <div class="stars-inner" id="stars-inner{{this._id}}" style="color:#f8ce0b; --r:20%; --a:{{this.rating}}">
                                     </div>
                                 </div>
                             </p>
@@ -170,58 +171,5 @@
             </a>
         </div>
     </div>
-    <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6 col-12">
-            <a href="" style="color: black;">
-            <div class="card" style="opacity: 90%; height: 80px;">
-                <div class="card-body" style="padding: 10px;">
-                    <div class="row">
-                        <div class="col-7">
-                            <h5 class="card-title" style="margin-bottom: 2px;">Rohit Sharma</h5>
-                            <p class="card-text">Crops grown : Tomato, potato, rice</p>
-                        </div>
-                        <div class="col-3">
-                            <p class="card-text">Rating : 5
-                                <div class="stars-outer" id="stars-outer{{this.1._id}}">
-                                    <div class="stars-inner" id="stars-inner{{this.1._id}}" style="color:#f8ce0b; --r:20%; --a:{{this.1.rating}}">
-                                    </div>
-                                </div>
-                            </p>
-                        </div>
-                        <div class="col-1" style="margin-top: 17px;">
-                          <button type="button" class="btn btn-success btn-circle">1</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            </a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6 col-12">
-            <a href="" style="color: black;">
-            <div class="card" style="opacity: 90%; height: 80px;">
-                <div class="card-body" style="padding: 10px;">
-                    <div class="row">
-                        <div class="col-7">
-                            <h5 class="card-title" style="margin-bottom: 2px;">Rohit Sharma</h5>
-                            <p class="card-text">Crops grown : Tomato, potato, rice</p>
-                        </div>
-                        <div class="col-3">
-                            <p class="card-text">Rating : 5
-                                <div class="stars-outer" id="stars-outer{{this.1._id}}">
-                                    <div class="stars-inner" id="stars-inner{{this.1._id}}" style="color:#f8ce0b; --r:20%; --a:{{this.1.rating}}">
-                                    </div>
-                                </div>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            </a>
-        </div>
-    </div>
-    </a>
+    {{/each}}
 </div>
