--- a/src/views/farmer_profile.hbs
+++ b/src/views/farmer_profile.hbs
@@ -61,7 +61,7 @@
                 <a class="nav-link" href="updateprofile">Update Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="chat">Chat</a>
+                <a class="nav-link" href="/users/chat">Chat</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="logout">Logout</a>
@@ -81,7 +81,7 @@
             <a class="page-scroll" href="updateprofile">Update Profile</a>
           </li>
           <li>
-            <a class="page-scroll" href="chat">Chat</a>
+            <a class="page-scroll" href="/users/chat">Chat</a>
           </li>
           <li>
             <a class="page-scroll" href="logout">Logout</a>
