--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -1,4 +1,344 @@
+{{#section 'link'}}
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="/static/css/main.css">
+{{/section}}
+
 {{#section 'style'}}
+.cover {
+      display: flex;
+      flex-direction: column;
+    }
+    .content {
+      flex: 1 0 auto;
+    }
+    #contact {
+      flex-shrink: 0;
+    }
+    #mygif {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+    }
+
+{{!-- .container{max-width:1170px; margin:auto;} --}}
+
+.received_msg {
+  display: inline-block;
+  padding: 0 0 0 10px;
+  vertical-align: top;
+  width: 92%;
+ }
+ .received_withd_msg p {
+  background: #ebebeb none repeat scroll 0 0;
+  border-radius: 3px;
+  color: #646464;
+  font-size: 14px;
+  margin: 0;
+  padding: 5px 10px 5px 12px;
+  width: 100%;
+}
+.time_date {
+  color: #747474;
+  display: block;
+  font-size: 12px;
+  margin: 8px 0 0;
+}
+.received_withd_msg { width: 80%;}
+.mesgs {
+  padding: 30px 15px 15px 25px;
+}
+
+ .sent_msg p {
+  background: #05728f none repeat scroll 0 0;
+  border-radius: 3px;
+  font-size: 14px;
+  margin: 0; color:#fff;
+  padding: 5px 10px 5px 12px;
+  width:100%;
+}
+.outgoing_msg{ overflow:hidden; margin:26px 0 26px;}
+.sent_msg {
+  float: right;
+  width: 80%;
+  text-align: right;
+}
+.input_msg_write input {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border: medium none;
+  color: #4c4c4c;
+  font-size: 15px;
+  min-height: 48px;
+  width: 100%;
+}
+
+.type_msg {border-top: 1px solid #c4c4c4;position: relative;border-bottom: 1px solid #c4c4c4}
+.msg_send_btn {
+  background: #05728f none repeat scroll 0 0;
+  border: medium none;
+  border-radius: 50%;
+  color: #fff;
+  cursor: pointer;
+  font-size: 17px;
+  height: 33px;
+  position: absolute;
+  right: 0;
+  top: 11px;
+  width: 33px;
+}
+{{!-- .messaging { padding: 0 0 50px 0;} --}}
+.msg_history {
+  {{!-- height: 380px; --}}
+  max-height: 60vh;
+  overflow-y: auto;
+}
+{{/section}}
+
+<div class="cover">
+  <img src="/img/crops.gif" id="mygif" alt="...">
+  <header id="header-wrap">
+      <!-- Navbar Start -->
+      <nav
+        class="navbar navbar-expand-lg fixed-top scrolling-navbar"
+        style="background-color: #fff;"
+      >
+        <div class="container">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#main-navbar"
+              aria-controls="main-navbar"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+              <span class="icon-menu"></span>
+              <span class="icon-menu"></span>
+              <span class="icon-menu"></span>
+            </button>
+            <img src="/img/logo.png" class="navbar-brand" style="width: 230px; height:70px" alt=""/>
+          </div>
+          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 10%;">
+            <ul class="navbar-nav mr-auto w-100">
+              <li class="nav-item active">
+                <a class="nav-link" href="dashboard">Dashboard</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="viewfarmers">View Farmer's Profiles</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="updateprofile">Update Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="chat">Chat</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="logout">Logout</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <ul class="mobile-menu">
+          <li>
+            <a class="page-scroll" href="dashboard">Dashboard</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="viewfarmers">View Farmer's Profiles</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="updateprofile">Update Profile</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="chat">Chat</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="logout">Logout</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <br><br><br><br>
+    <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+       <span style="background-color: #fff; font-size: 40px; color:#016168; padding:15px; opacity: 90%;">Chat</span> 
+    </h1>
+<div class="container" style="position: relative; opacity: 90%">
+  <div class="row">
+    <div class="col-12">
+      <div class="col-12 col-md-12 col-lg-8 log-style" style="padding: 0px;">
+<div class="messaging">
+      <div class="inbox_msg">
+        {{!-- <div class="inbox_people">
+          <div class="headind_srch">
+            <div class="recent_heading">
+              <h4>Recent</h4>
+            </div>
+            <div class="srch_bar">
+              <div class="stylish-input-group">
+                <input type="text" class="search-bar"  placeholder="Search" >
+                <span class="input-group-addon">
+                <button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
+                </span> </div>
+            </div>
+          </div>
+          <div class="inbox_chat">
+            <div class="chat_list active_chat">
+              <div class="chat_people">
+                <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                <div class="chat_ib">
+                  <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
+                  <p>Test, which is a new approach to have all solutions 
+                    astrology under one roof.</p>
+                </div>
+              </div>
+            </div>
+            <div class="chat_list">
+              <div class="chat_people">
+                <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                <div class="chat_ib">
+                  <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
+                  <p>Test, which is a new approach to have all solutions 
+                    astrology under one roof.</p>
+                </div>
+              </div>
+            </div>
+            <div class="chat_list">
+              <div class="chat_people">
+                <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                <div class="chat_ib">
+                  <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
+                  <p>Test, which is a new approach to have all solutions 
+                    astrology under one roof.</p>
+                </div>
+              </div>
+            </div>
+            <div class="chat_list">
+              <div class="chat_people">
+                <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                <div class="chat_ib">
+                  <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
+                  <p>Test, which is a new approach to have all solutions 
+                    astrology under one roof.</p>
+                </div>
+              </div>
+            </div>
+            <div class="chat_list">
+              <div class="chat_people">
+                <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                <div class="chat_ib">
+                  <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
+                  <p>Test, which is a new approach to have all solutions 
+                    astrology under one roof.</p>
+                </div>
+              </div>
+            </div>
+            <div class="chat_list">
+              <div class="chat_people">
+                <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                <div class="chat_ib">
+                  <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
+                  <p>Test, which is a new approach to have all solutions 
+                    astrology under one roof.</p>
+                </div>
+              </div>
+            </div>
+            <div class="chat_list">
+              <div class="chat_people">
+                <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                <div class="chat_ib">
+                  <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
+                  <p>Test, which is a new approach to have all solutions 
+                    astrology under one roof.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> --}}
+        <div class="mesgs" style="background-color: white;">
+          <div class="msg_history" style="display: flex; flex-direction: column-reverse">
+            <div>
+            <div class="incoming_msg">
+              <div class="received_msg">
+                <div class="received_withd_msg">
+                  <p>Test which is a new approach to have all
+                    solutions</p>
+                  <span class="time_date"> 11:01 AM    |    June 9</span></div>
+              </div>
+            </div>
+            <div class="outgoing_msg">
+              <div class="sent_msg">
+                <p>Test which is a new approach to have all
+                  solutions</p>
+                <span class="time_date"> 11:01 AM    |    June 9</span> </div>
+            </div>
+            <div class="outgoing_msg">
+              <div class="sent_msg">
+                <p>Test which is a new approach to have all
+                  solutions</p>
+                <span class="time_date"> 11:01 AM    |    June 9</span> </div>
+            </div>
+            <div class="outgoing_msg">
+              <div class="sent_msg">
+                <p>Test which is a new approach to have all
+                  solutions</p>
+                <span class="time_date"> 11:01 AM    |    June 9</span> </div>
+            </div>
+            <div class="outgoing_msg">
+              <div class="sent_msg">
+                <p>Test which is a new approach to have all
+                  solutions</p>
+                <span class="time_date"> 11:01 AM    |    June 9</span> </div>
+            </div>
+            <div class="incoming_msg">
+              <div class="received_msg">
+                <div class="received_withd_msg">
+                  <p>Test, which is a new approach to have</p>
+                  <span class="time_date"> 11:01 AM    |    Yesterday</span></div>
+              </div>
+            </div>
+            <div class="outgoing_msg">
+              <div class="sent_msg">
+                <p>Apollo University, Delhi, India Test</p>
+                <span class="time_date"> 11:01 AM    |    Today</span> </div>
+            </div>
+            <div class="incoming_msg">
+              <div class="received_msg">
+                <div class="received_withd_msg">
+                  <p>We work directly with our designers and suppliers,
+                    and sell direct to you, which means quality, exclusive
+                    products, at a price anyone can afford.</p>
+                  <span class="time_date"> 11:01 AM    |    Today</span></div>
+              </div>
+            </div>
+            </div>
+          </div>
+          <div class="type_msg">
+            <div class="input_msg_write">
+              <form id="chatform" style="margin-bottom: 0;">
+                <input type="text" class="write_msg" placeholder="Type a message" name="msg"/>
+                <button class="msg_send_btn" type="button" id="chatbutton" name="chatbutton"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+              </form>
+              <template id="message-template" >
+                        <div>
+                            <p>\{{message}}</p>
+                            {{!-- <p>\{{createdAt}}</p> --}}
+                        </div>
+                    </template>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div></div>
+  </div>
+  </div>
+  </div>
+{{!-- {{#section 'style'}}
     .cover {
       display: flex;
       flex-direction: column;
@@ -53,75 +393,6 @@
   
   <div class="cover">
   <img src="/img/crops.gif" id="mygif" alt="...">
-
-  <header id="header-wrap">
-      <!-- Navbar Start -->
-      <nav
-        class="navbar navbar-expand-lg fixed-top scrolling-navbar"
-        style="background-color: #fff;"
-      >
-        <div class="container">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#main-navbar"
-              aria-controls="main-navbar"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-              <span class="icon-menu"></span>
-              <span class="icon-menu"></span>
-              <span class="icon-menu"></span>
-            </button>
-            <img src="/img/logo.png" class="navbar-brand" style="width: 230px; height:70px" alt=""/>
-          </div>
-          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 10%;">
-            <ul class="navbar-nav mr-auto w-100">
-              <li class="nav-item active">
-                <a class="nav-link" href="dashboard">Dashboard</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="viewfarmers">View Farmer's Profiles</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="updateprofile">Update Profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/chat/chat_app">Chat</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="logout">Logout</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <ul class="mobile-menu">
-          <li>
-            <a class="page-scroll" href="dashboard">Dashboard</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="viewfarmers">View Farmer's Profiles</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="updateprofile">Update Profile</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="/chat/chat_app">Chat</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="logout">Logout</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <br><br><br><br>
-    <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
-       <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 90%;">Chat</span> 
-    </h1>
     <section id="form-dom">
         <div class="scroll">
         <div class="container" style="margin-bottom: 30px; opacity: 90%;">
@@ -148,4 +419,4 @@
           </div>
         </div>
         </div>
-  </div>
+  </div> --}}
