--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -127,7 +127,7 @@
           </div>
           <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 10%;">
             <ul class="navbar-nav mr-auto w-100">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="dashboard">Dashboard</a>
               </li>
               <li class="nav-item">
