--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -6,11 +6,8 @@
 <link rel="stylesheet" type="text/css" href="/static/css/main.css">
 {{/section}}
 <div id="messages"></div>
-
 <form id="chatform">
-    <input type="hidden" id="chat_curr_user" name="chat_curr_user" value="{{curr_user.username}}">
-    <input type="hidden" id="chat_other_user" name="chat_other_user" value="{{other_user.username}}">
-    <input type="text" name="msg" id="msg"><br>
+    <input type="text" name="msg"><br>
     <button type="submit" class="btn btn-common btn-nv-sty" style="width: 50%;" id="chatbutton" name="chatbutton">
         Send
     </button>   
