--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,9 +1,7 @@
-
-    {{#section 'style'}}
+{{#section 'style'}}
     .cover {
       display: flex;
       flex-direction: column;
-      height: 100%;
     }
     .content {
       flex: 1 0 auto;
@@ -76,21 +74,7 @@
                         </div>
                       </div>
                       <div class="row">
-                        <div class="col-12 col-md-6">
-                          <button
-                            type="button"
-                            id="passwordReset"
-                            class="btn btn-common btn-nv-sty"
-                            style="
-                              width: 100%;
-                              background-color: #fff;
-                              color: #000;
-                              border: 1px solid black;
-                            "
-                          >
-                            Forgot Password
-                          </button>
-                        </div>
+                        <div class="col-lg-3 col-md-3"></div>
                         <div class="col-12 col-md-6">
                           <button
                             type="submit"
@@ -161,7 +145,6 @@
         function openForm() {
             document.getElementById("myForm").style.display = "block";
         }
-
         function closeForm() {
             document.getElementById("myForm").style.display = "none";
         }
@@ -172,12 +155,9 @@
                 openEffect: "none",
                 closeEffect: "none"
             });
-
             $(".zoom").hover(function() {
-
                 $(this).addClass('transition');
             }, function() {
-
                 $(this).removeClass('transition');
             });
         });
