--- a/src/views/chat_app_buyer.hbs
+++ b/src/views/chat_app_buyer.hbs
@@ -145,7 +145,7 @@
     <div class="row">
         <div class="col-lg-3"></div>
         <div class="col-lg-6 col-12">
-            <a href="" style="color: black;">
+            <a href="/chat/{{this._id}}" style="color: black;">
             <div class="card" style="opacity: 90%; height: 80px;">
                 <div class="card-body" style="padding: 10px;">
                     <div class="row">
