--- a/src/views/chat_app_farmer.hbs
+++ b/src/views/chat_app_farmer.hbs
@@ -110,7 +110,7 @@
     <div class="row">
         <div class="col-lg-4"></div>
         <div class="col-lg-4 col-12">
-            <a href="/chat/{{this._id}}" style="color: black;">
+            <a href="/chat/{{this._id}}/{{this.room_id}}" style="color: black;">
             <div class="card" style="opacity: 90%; height: 90px;">
                 <div class="card-body" style="padding: 10px;">
                     <div class="row">
@@ -134,7 +134,7 @@
     <div class="row">
         <div class="col-lg-4"></div>
         <div class="col-lg-4 col-12">
-            <a href="/chat/{{this._id}}" style="color: black;">
+            <a href="/chat/{{this._id}}/{{this.room_id}}" style="color: black;">
             <div class="card" style="opacity: 90%; height: 90px;">
                 <div class="card-body" style="padding: 10px;">
                     <div class="row">
@@ -158,7 +158,7 @@
     <div class="row">
         <div class="col-lg-4"></div>
         <div class="col-lg-4 col-12">
-            <a href="/chat/{{this._id}}" style="color: black;">
+            <a href="/chat/{{this._id}}/{{this.room_id}}" style="color: black;">
             <div class="card" style="opacity: 90%; height: 110px;">
                 <div class="card-body" style="padding: 10px;">
                     <div class="row">
